--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -222,6 +222,7 @@ jobs:
         diff /tmp/random-read.txt /tmp/random.txt
         GPGReset
         # Fill this applet as much as possible
+        echo -e 'admin\nkey-attr\n1\n4096\n1\n4096\n1\n4096\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to RSA4096
         Addcardkey 1 # generate Signature key on card
         Addcardkey 2 # generate Encryption key on card
         Addcardkey 3 # generate Authentication key on card
