ASan does not work for shared library with LD_PRELOAD, so disable in ci

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,9 @@ endif (ENABLE_DEBUG_OUTPUT)
 if (ENABLE_TESTS)
     set(CMAKE_POSITION_INDEPENDENT_CODE ON)
     if (CMAKE_C_COMPILER_ID MATCHES "Clang")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage -fsanitize=address")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage")
     else()
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-usage --coverage -fsanitize=address")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-usage --coverage")
     endif()
 endif (ENABLE_TESTS)
 if (ENABLE_FUZZING)
