--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -82,6 +82,8 @@ jobs:
         sleep 3
         timeout 1s pcsc_scan || true
         go env -w GO111MODULE=on
+      env:
+       ASAN_OPTIONS: verify_asan_link_order=0
 
     - name: Test the Admin
       run: go test -v test-via-pcsc/admin_test.go
