--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,10 +15,9 @@ if (ENABLE_DEBUG_OUTPUT)
 endif (ENABLE_DEBUG_OUTPUT)
 if (ENABLE_TESTS)
     set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-    if (CMAKE_C_COMPILER_ID MATCHES "Clang")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage")
-    else()
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-usage --coverage")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage -fsanitize=address")
+    if (NOT CMAKE_C_COMPILER_ID MATCHES "Clang")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-usage")
     endif()
 endif (ENABLE_TESTS)
 if (ENABLE_FUZZING)
