--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,6 +78,7 @@ jobs:
         sudo killall -9 pcscd || true
         sudo cp build/libu2f-virt-card.so /usr/local/lib/
         sudo cp test-via-pcsc/pcscd-reader.conf /etc/reader.conf.d/
+        bash -c "sudo ASAN_OPTIONS=verify_asan_link_order=0 env"
         bash -c "sudo pcscd -a -f >/tmp/pcscd.log &"
         sleep 3
         timeout 1s pcsc_scan || true
