test-real: Modify the test.sh script to use shUnit2 framework
Signed-off-by: Zamir SUN <sztsian@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "tinycbor"]
 	path = tinycbor
 	url = https://github.com/intel/tinycbor.git
+[submodule "test-real/shunit2"]
+	path = test-real/shunit2
+	url = https://github.com/kward/shunit2.git
