--- a/test-via-pcsc/pcscd-reader.conf
+++ b/test-via-pcsc/pcscd-reader.conf
@@ -1,4 +1,4 @@
-FRIENDLYNAME      "Canokey [PIV OATH Admin OpenPGP]"
+FRIENDLYNAME      "Canokey [OpenPGP PIV OATH]"
 DEVICENAME        /dev/null
 LIBPATH           /usr/local/lib/libu2f-virt-card.so
 CHANNELID         1
