--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,8 @@ if (USBIP)
     target_include_directories(canokey-usbip SYSTEM PRIVATE littlefs)
     target_compile_definitions(canokey-usbip PRIVATE VIRT_VENDOR)
     target_compile_options(canokey-usbip PRIVATE "-fsanitize=address")
-    target_link_libraries(canokey-usbip general canokey-core "-fsanitize=address")
+    find_package (Threads)
+    target_link_libraries(canokey-usbip general canokey-core "-fsanitize=address" Threads::Threads)
     add_dependencies(canokey-usbip gitrev)
     set(gitrev_in virt-card/git-rev.h.in)
     set(gitrev virt-card/git-rev.h)
