--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -89,6 +89,9 @@ jobs:
     - name: Test the Admin
       run: go test -v test-via-pcsc/admin_test.go
 
+    - name: Test the NDEF
+      run: go test -v test-via-pcsc/ndef_test.go
+
     - name: Test the FIDO2
       run: |
         cd fido2-tests
