--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ if (ENABLE_DEBUG_OUTPUT)
 endif (ENABLE_DEBUG_OUTPUT)
 if (ENABLE_TESTS)
     set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage -fsanitize=address")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage -fsanitize=address -fsanitize=undefined")
     if (NOT CMAKE_C_COMPILER_ID MATCHES "Clang")
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-usage")
     endif()
