--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -82,7 +82,7 @@ jobs:
         sudo killall -9 pcscd || true
         sudo cp build/libu2f-virt-card.so /usr/local/lib/
         sudo cp test-via-pcsc/pcscd-reader.conf /etc/reader.conf.d/
-        bash -c "sudo LD_PRELOAD=$(gcc -print-file-name=libasan.so) pcscd -a -f >/tmp/pcscd.log &"
+        bash -c 'sudo LD_PRELOAD="$(gcc -print-file-name=libasan.so) $(gcc -print-file-name=libubsan.so)" pcscd -a -f >/tmp/pcscd.log &'
         sleep 12
         timeout 1s pcsc_scan || true
         go env -w GO111MODULE=on
