--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,16 +14,13 @@ set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -fno-omit-frame-pointer")
 if (ENABLE_DEBUG_OUTPUT)
     add_definitions(-DDEBUG_OUTPUT)
 endif (ENABLE_DEBUG_OUTPUT)
-if (ENABLE_TESTS)
+if (ENABLE_TESTS OR ENABLE_FUZZING)
     set(CMAKE_POSITION_INDEPENDENT_CODE ON)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage -fsanitize=address -fsanitize=undefined")
     if (NOT CMAKE_C_COMPILER_ID MATCHES "Clang")
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-usage")
     endif()
-endif (ENABLE_TESTS)
-if (ENABLE_FUZZING)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -fsanitize=undefined")
-endif (ENABLE_FUZZING)
+endif ()
 
 add_subdirectory(canokey-crypto)
 
@@ -34,8 +31,14 @@ file(GLOB_RECURSE SRC src/*.c applets/*.c interfaces/*.c
 add_library(canokey-core ${SRC})
 
 if (ENABLE_TESTS)
-    target_compile_definitions(canokey-core PUBLIC -DTEST)
+    target_compile_definitions(canokey-core PUBLIC TEST)
 endif (ENABLE_TESTS)
+if (ENABLE_FUZZING)
+    target_compile_definitions(canokey-core PUBLIC TEST FUZZ)
+    if (ENABLE_TESTS)
+        message(WARNING "ENABLE_FUZZING will cause some tests to FAIL")
+    endif (ENABLE_TESTS)
+endif (ENABLE_FUZZING)
 
 target_include_directories(canokey-core SYSTEM
         PUBLIC
@@ -89,7 +92,6 @@ if (ENABLE_TESTS)
             littlefs/bd/lfs_filebd.c)
     target_include_directories(fido-hid-over-udp SYSTEM PRIVATE virt-card littlefs)
     target_link_libraries(fido-hid-over-udp general canokey-core "-fsanitize=address")
-    target_compile_options(fido-hid-over-udp PRIVATE "-fsanitize=address")
 
     pkg_search_module(PCSCLITE libpcsclite)
     if (PCSCLITE_FOUND)
@@ -112,6 +114,6 @@ if (ENABLE_FUZZING)
             virt-card/fabrication.c
             littlefs/bd/lfs_filebd.c)
     target_include_directories(honggfuzz-fuzzer SYSTEM PRIVATE virt-card littlefs)
-    target_compile_definitions(honggfuzz-fuzzer PRIVATE TEST FUZZ)
+    target_compile_definitions(honggfuzz-fuzzer PUBLIC VIRT_VENDOR)
     target_link_libraries(honggfuzz-fuzzer canokey-core)
 endif (ENABLE_FUZZING)
