add script to build FIDO tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,14 +45,7 @@ jobs:
         gpg --version
     
     - name: Build FIDO Tests
-      run: |
-        git clone --depth 1 https://github.com/google/u2f-ref-code.git
-        pushd u2f-ref-code/u2f-tests/HID
-        git clone --depth 1 -b lollipop-release https://android.googlesource.com/platform/system/core
-        cd ../NFC; make
-        popd
-        git clone --depth 1 https://github.com/canokeys/fido2-tests.git
-        pushd fido2-tests; pip3 install --user -r requirements.txt; popd
+      run: ./test-via-pcsc/build_fido_tests.sh
 
     - name: Build for Test
       run: |
