--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,7 @@ if (ENABLE_TESTS)
     enable_testing()
 
     add_executable(fido-hid-over-udp
-            virt-card/dummy.c
+            virt-card/device-sim.c
             virt-card/fabrication.c
             virt-card/fido-hid-over-udp.c
             littlefs/bd/lfs_filebd.c)
@@ -97,7 +97,7 @@ if (ENABLE_TESTS)
     pkg_search_module(PCSCLITE libpcsclite)
     if (PCSCLITE_FOUND)
         add_library(u2f-virt-card SHARED
-                virt-card/dummy.c
+                virt-card/device-sim.c
                 virt-card/ifdhandler.c
                 virt-card/fabrication.c
                 littlefs/bd/lfs_filebd.c)
@@ -111,7 +111,7 @@ endif (ENABLE_TESTS)
 if (ENABLE_FUZZING)
     add_executable(honggfuzz-fuzzer
             fuzzer/honggfuzz-fuzzer.c
-            virt-card/dummy.c
+            virt-card/device-sim.c
             virt-card/fabrication.c
             littlefs/bd/lfs_filebd.c)
     target_include_directories(honggfuzz-fuzzer SYSTEM PRIVATE virt-card littlefs)
@@ -122,7 +122,7 @@ if (ENABLE_FUZZING)
     add_executable(honggfuzz-debug
             fuzzer/honggfuzz-debug.c
             fuzzer/honggfuzz-fuzzer.c
-            virt-card/dummy.c
+            virt-card/device-sim.c
             virt-card/fabrication.c
             littlefs/bd/lfs_filebd.c)
     target_include_directories(honggfuzz-debug SYSTEM PRIVATE virt-card littlefs)
