--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ if (QEMU)
     set_target_properties(canokey-qemu PROPERTIES PUBLIC_HEADER virt-card/canokey-qemu.h)
     set_target_properties(canokey-qemu PROPERTIES SOVERSION ${LIBCANOKEY_QEMU_SO_VERSION})
     target_include_directories(canokey-qemu SYSTEM PRIVATE littlefs)
-    target_compile_definitions(canokey-qemu PRIVATE VIRT_VENDOR VIRT_VENDOR_QEMU)
+    target_compile_definitions(canokey-qemu PRIVATE HW_VARIANT_NAME="CanoKey QEMU")
     target_compile_options(canokey-qemu PRIVATE)
     target_link_libraries(canokey-qemu general canokey-core)
     add_dependencies(canokey-qemu gitrev)
@@ -108,6 +108,7 @@ if (USBIP)
             virt-card/fabrication.c
             littlefs/bd/lfs_filebd.c)
     target_include_directories(canokey-usbip SYSTEM PRIVATE littlefs)
+    target_compile_definitions(canokey-usbip PRIVATE HW_VARIANT_NAME="CanoKey USB/IP")
     target_compile_options(canokey-usbip PRIVATE "-fsanitize=address")
     find_package (Threads)
     target_link_libraries(canokey-usbip general canokey-core "-fsanitize=address" Threads::Threads)
